src/test/deca/context/invalid/decl_comp_inval_02.deca
// Description:
//    Initialisation
//
// Resultats:
//    Ligne 12: The validated object is null.
//
// Historique:
//    cree le 01/01/2023

{
   int y = 2;
   z = x + y;
}
